Добавили логику для активов. И отправка запросов на изменение или удаление активов после утверждения админом.
